<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    android:background="@color/colorBackgroundActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/editText_birthdayName"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_margin="15dp"
            android:background="@drawable/rounded_edittext"
            android:ems="10"
            android:focusable="true"
            android:hint="@string/name"
            android:inputType="textNoSuggestions|textCapSentences|textEmailSubject"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textColor="@color/colorText_black"
            android:textSize="18sp"
            android:autofillHints="" />

        <LinearLayout
            android:id="@+id/linearLayout_when"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/ripple_effect"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_whenText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_weight="0.85"
                android:paddingStart="15dp"
                android:paddingEnd="12dp"
                android:text="@string/when"
                android:textColor="@color/colorText_black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView_when"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.44"
                android:textAlignment="textEnd"
                android:textColor="@color/colorText_gray"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/imageView_goWhen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:contentDescription="@string/todo"
                android:tint="@color/colorText_gray"
                app:srcCompat="@drawable/ic_access_time_black_24dp" />

        </LinearLayout>

        <View
            android:id="@+id/view_divider3"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@color/colorText_gray" />

        <LinearLayout
            android:id="@+id/linearLayout_reminderBirthday"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/ripple_effect"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_reminderTextBirthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_weight="0.75"
                android:paddingStart="15dp"
                android:paddingEnd="12dp"
                android:text="@string/reminder"
                android:textColor="@color/colorText_black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView_reminderBirthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.55"
                android:textAlignment="textEnd"
                android:textColor="@color/colorText_gray"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/imageView_goReminderBirthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:contentDescription="@string/todo"
                android:tint="@color/colorText_gray"
                app:srcCompat="@drawable/ic_access_alarm_black_24dp" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>